--- a/website/public/index.html
+++ b/website/public/index.html
@@ -9,6 +9,7 @@
       name="description"
       content="Tech with Purpose."
     />
+    <meta name="google-site-verification" content="EIP9JsKE-I2GooRNZTtIQGRQAl0JM8LDq4E7gYXQ31w" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
