--- a/website/public/index.html
+++ b/website/public/index.html
@@ -10,7 +10,7 @@
       content="Tech with Purpose."
     />
     <meta name="google-site-verification" content="EIP9JsKE-I2GooRNZTtIQGRQAl0JM8LDq4E7gYXQ31w" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.ico" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
