Add meta tags for SEO

--- a/website/public/index.html
+++ b/website/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Tech with Purpose."
+      content="An organization at UC Irvine that delivers high quality software for nonprofits while providing meaningful opportunities for students to develop Tech with Purpose."
     />
     <meta name="google-site-verification" content="EIP9JsKE-I2GooRNZTtIQGRQAl0JM8LDq4E7gYXQ31w" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/ctc-logo.png" />
@@ -26,6 +26,24 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Commit the Change</title>
+    <link rel="canonical" href="https://ctc-uci.com" />
+    <meta name="robots" content="index,follow" />
+
+    <!--- Open Graph data -->
+    <meta property="og:title" content="Commit the Change" />
+    <meta property="og:url" content="https://ctc-uci.com" />
+    <meta property="og:type" content="website" />
+    <meta property="og:description" content="An organization at UC Irvine that delivers high quality software for nonprofits while providing meaningful opportunities for students to develop Tech with Purpose." />
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:image" content="%PUBLIC_URL%/commit-the-change-name-logo.jpg" />
+
+    <!--- Twitter Card -->
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:title" content="Commit the Change" />
+    <meta name="twitter:description" content="An organization at UC Irvine that delivers high quality software for nonprofits while providing meaningful opportunities for students to develop Tech with Purpose." />
+    <meta name="twitter:url" content="https://www.ctc-uci.com" />
+    <meta property="twitter:image" content="%PUBLIC_URL%/commit-the-change-name-logo.jpg" />
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
