--- a/website/public/index.html
+++ b/website/public/index.html
@@ -35,14 +35,16 @@
     <meta property="og:type" content="website" />
     <meta property="og:description" content="An organization at UC Irvine that delivers high quality software for nonprofits while providing meaningful opportunities for students to develop Tech with Purpose." />
     <meta property="og:locale" content="en_US" />
-    <meta property="og:image" content="%PUBLIC_URL%/commit-the-change-name-logo.jpg" />
+    <meta property="og:image" content="https://lichgast.sirv.com/Images/ctc.png?w=1200&h=672" />
+    <meta property="og:image:width" content="1200" /> 
+    <meta property="og:image:height" content="672" />
 
     <!--- Twitter Card -->
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:title" content="Commit the Change" />
     <meta name="twitter:description" content="An organization at UC Irvine that delivers high quality software for nonprofits while providing meaningful opportunities for students to develop Tech with Purpose." />
     <meta name="twitter:url" content="https://www.ctc-uci.com" />
-    <meta property="twitter:image" content="%PUBLIC_URL%/commit-the-change-name-logo.jpg" />
+    <meta property="twitter:image" content="https://lichgast.sirv.com/Images/ctc.png?w=1200&h=672" />
 
   </head>
   <body>
